--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
 <body>
     <header>
         <nav class="topnav" id="myTopnav">
-
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#menu">Menu</a>
-            <a href="#specials">Specials</a>
-            <a href="#events">Events</a>
-            <a href="#chefs">Chefs</a>
-            <a href="#gallery">Gallery</a>
-            <a href="#contact">Contact</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                <i class="fa fa-bars"></i>
-            </a>
+                <div><h1>Molen Food</h1></div>
+                <div><a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#menu">Menu</a>
+                <a href="#specials">Specials</a>
+                <a href="#events">Events</a>
+                <a href="#gallery">Gallery</a>
+                <a href="#chefs">Chefs</a>              
+                <a href="#contact">Contact</a>
+            </div>
+                <div><button>Connexion</button>
+                </div>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                </a>
         </nav>
     </header>
 
