--- a/index.html
+++ b/index.html
@@ -11,12 +11,23 @@
 
 <body>
     <header>
+        <div>
+            <i class="fa-thin fa-mobile-button"></i>
+            <i class="fa-solid fa-mobile-button"></i>
+        </div>
+        <div>
+
+        </div>
         <nav class="topnav" id="myTopnav">
                 <div><h1>Molen Food</h1></div>
-                <div><a href="#home">Home</a>
+                <div>
+                <a href="#home">Home</a>
                 <a href="#about">About</a>
                 <a href="#menu">Menu</a>
                 <a href="#specials">Specials</a>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                </a>
                 <a href="#events">Events</a>
                 <a href="#gallery">Gallery</a>
                 <a href="#chefs">Chefs</a>              
@@ -24,9 +35,6 @@
             </div>
                 <div><button>Connexion</button>
                 </div>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                    <i class="fa fa-bars"></i>
-                </a>
         </nav>
     </header>
 
