date actuelle mise

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <header>
-        <div>
-            <i class="fa-thin fa-mobile-button"></i>
-            <i class="fa-solid fa-mobile-button"></i>
+        <div class="divHeader">
+            <span><i class="fa-solid fa-mobile-button"></i> +1 5589 5548855</span>
+            <span><i class="fa-regular fa-clock"></i><span id="date"></span> </span>
         </div>
-        <div>
+        <div class="divHeader">
 
         </div>
         <nav class="topnav" id="myTopnav">
