--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@
 
 <body>
     <header>
-        <div class="divHeader">
-            <span><i class="fa-solid fa-mobile-button"></i> +1 5589 5548855</span>
-            <span><i class="fa-regular fa-clock"></i><span id="date"></span> </span>
-        </div>
-        <div class="divHeader">
-
+        <div id="firstDiv" class="container">
+            <div class="divHeader" id="fashHeader">
+                <span><i class="fa-solid fa-mobile-button"></i> +1 5589 5548855</span>
+                <span style='padding-left: 20px;'><i class="fa-regular fa-clock"></i> <span id="date"></span> </span>
+            </div>
+            <div class="divHeader">
+                <span class="spanHeader">En</span> <span>/</span> <span class="spanHeader">De</span>
+            </div>
         </div>
         <nav class="topnav" id="myTopnav">
-                <div><h1>Molen Food</h1></div>
-                <div>
+            <div>
+                <h1>Molen Food</h1>
+            </div>
+            <div>
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
                 <a href="#menu">Menu</a>
@@ -30,12 +34,22 @@
                 </a>
                 <a href="#events">Events</a>
                 <a href="#gallery">Gallery</a>
-                <a href="#chefs">Chefs</a>              
+                <a href="#chefs">Chefs</a>
                 <a href="#contact">Contact</a>
             </div>
-                <div><button>Connexion</button>
-                </div>
+            <div><button class="button">Connexion</button>
+            </div>
         </nav>
+        <div class='container' id="div3">
+            <div>
+            <h1>Welcome to <span>molen food</span></h1>
+            <p>Delivering great food for more than 18 years!</p>
+            <button class="button">OUR MENU</button> <button class="button">BOOK A TABLE</button>
+            </div>
+            <div>
+                
+            </div>
+        </div>
     </header>
 
     <section>
