--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div>
             <h1>Welcome to <span>molen food</span></h1>
             <p>Delivering great food for more than 18 years!</p>
-            <button class="button">OUR MENU</button> <button class="button">BOOK A TABLE</button>
+            <button class="button">OUR MENU</button> <button class="button" style="margin-left: 15px;">BOOK A TABLE</button>
             </div>
             <div>
                 
