--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
         </nav>
         <div class='container' id="div3">
             <div>
-            <h1>Welcome to <span>molen food</span></h1>
-            <p>Delivering great food for more than 18 years!</p>
-            <button class="button">OUR MENU</button> <button class="button" style="margin-left: 15px;">BOOK A TABLE</button>
+                <h1>Welcome to <span>molen food</span></h1>
+                <p>Delivering great food for more than 18 years!</p>
+                <button class="button">OUR MENU</button> <button class="button" style="margin-left: 15px;">BOOK A
+                    TABLE</button>
             </div>
-            <div>
-                
+            <div id="galere">
+                <button id="pulseButton"><i class="fa-solid fa-play"></i></button>
             </div>
         </div>
     </header>
