--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="#chefs">Chefs</a>
                 <a href="#contact">Contact</a>
             </div>
-            <div><button class="button">Connexion</button>
+            <div><button class="button" id="modalOne">Connexion</button>
             </div>
         </nav>
         <div class='container' id="div3">
@@ -51,6 +51,15 @@
                 <button id="pulseButton"><i class="fa-solid fa-play"></i></button>
             </div>
         </div>
+        <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <p>Some text in the Modal..</p>
+            </div>
+          
+          </div>
     </header>
 
     <section>
