--- a/index.html
+++ b/index.html
@@ -52,14 +52,12 @@
             </div>
         </div>
         <div id="myModal" class="modal">
-
-            <!-- Modal content -->
             <div class="modal-content">
-              <span class="close">&times;</span>
-              <p>Some text in the Modal..</p>
+                <span class="close">&times;</span>
+                <button class="modalBtn">Connexion</button>
+                <button class="modalBtn">Inscription</button>
             </div>
-          
-          </div>
+        </div>
     </header>
 
     <section>
