button play without modal

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="#chefs">Chefs</a>
                 <a href="#contact">Contact</a>
             </div>
-            <div><button class="button" id="modalOne">Connexion</button>
+            <div><button class="button" id="modalOne">CONNEXION</button>
             </div>
         </nav>
         <div class='container' id="div3">
@@ -47,8 +47,8 @@
                 <button class="button">OUR MENU</button> <button class="button" style="margin-left: 15px;">BOOK A
                     TABLE</button>
             </div>
-            <div id="galere">
-                <button id="pulseButton"><i class="fa-solid fa-play"></i></button>
+            <div>
+                <a href="https://www.youtube.com/watch?v=u6BOC7CDUTQ" class="glightbox play-btn"></a>
             </div>
         </div>
         <div id="myModal" class="modal">
