--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
         </div>
     </header>
 
-    <section>
-
+    <section id="about">
+        <div class="container">
+            <p>sfoieoifezfz</p>
+        </div>
     </section>
 
     <footer>
