--- a/index.html
+++ b/index.html
@@ -69,8 +69,32 @@
     </header>
 
     <section id="about">
-        <div class="container">
-            <p>sfoieoifezfz</p>
+        <div class="container" style="display: flex">
+            <div id="leftAbout">
+                <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+                <p><i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</i></p>
+                <ul>
+                    <li style ="list-style: none;"><i class="fa-regular fa-circle-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                    <li style ="list-style: none;"><i class="fa-regular fa-circle-check"></i> Duis aute irure dolor in reprehenderit in voluptate velit.
+                    </li>
+                    <li style ="list-style: none;"><i class="fa-regular fa-circle-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                        aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat
+                        nulla pariatur.</li>
+                </ul>
+                <p>
+                    Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    voluptate
+                    velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                    sunt in
+                    culpa qui officia deserunt mollit anim id est laborum
+                </p>
+            </div>
+            <div id="rightAbout">
+                <div id="imgAbout">
+                <img src="./public/img/about.jpg" alt="About">
+                </div>
+            </div>
         </div>
     </section>
 
