--- a/index.html
+++ b/index.html
@@ -97,15 +97,24 @@
             </div>
         </div>
     </section>
-
+    <section id="whyUs">
+        <div class="container">
+            <div class="title">
+                <h2>Why Us</h2>
+                <p>Why Choose Our Restaurant</p>
+            </div>
+            <div id="groupette">
+            <div class="triplette"><span>01</span><h4>Lorem Ipsum</h4><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa quod tempora totam ducimus corrupti!</p></div>
+            <div class="triplette"><span>02</span><h4>Repellat Nihil</h4><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente minus adipisci sit laboriosam blanditiis?</p></div>
+            <div class="triplette"><span>03</span><h4>Ad ad velit qui</h4><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quasi quibusdam quis facilis illum?</p></div>
+        </div>
+        </div>
+    </section>
     <footer>
 
     </footer>
 
     <script src='./public/js/app.js'></script>
-    <!-- Script JS Bootstrap -->
-    <script src='./node_modules/bootstrap/dist/js/bootstrap.bundle.js'></script>
-
 </body>
 
 </html>
