--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                 <p>Why Choose Our Restaurant</p>
             </div>
             <div id="groupette">
-            <div class="triplette"><span>01</span><h4>Lorem Ipsum</h4><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa quod tempora totam ducimus corrupti!</p></div>
-            <div class="triplette"><span>02</span><h4>Repellat Nihil</h4><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente minus adipisci sit laboriosam blanditiis?</p></div>
-            <div class="triplette"><span>03</span><h4>Ad ad velit qui</h4><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quasi quibusdam quis facilis illum?</p></div>
+            <div class="triplette"><div><span>01</span><h4>Lorem Ipsum</h4><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa quod tempora totam ducimus corrupti!</p></div></div>
+            <div class="triplette"><div><span>02</span><h4>Repellat Nihil</h4><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente minus adipisci sit laboriosam blanditiis?</p></div></div>
+            <div class="triplette"><div><span>03</span><h4>Ad ad velit qui</h4><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quasi quibusdam quis facilis illum?</p></div></div>
         </div>
         </div>
     </section>
