WhyUs rééllement done

--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
         </div>
         </div>
     </section>
+    <section id="menu">
+        <div class="container">
+
+        </div>
+    </section>
     <footer>
 
     </footer>
