--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <section id="whyUs">
         <div class="container">
             <div class="title">
-                <h2>Why Us</h2>
+                <h2>WHY US</h2>
                 <p>Why Choose Our Restaurant</p>
             </div>
             <div id="groupette">
@@ -113,7 +113,29 @@
     </section>
     <section id="menu">
         <div class="container">
-
+            <div class="title">
+                <h2>MENU</h2>
+                <p>Check Our Tasty Menu</p>
+            </div>
+            <div id="div2Menu">
+                <ul id="leVraiMenu">
+                    <li>All</li>
+                    <li>Starters</li>
+                    <li>Salads</li>
+                    <li>Specialty</li>
+                </ul>
+            </div>
+            <div id="div3Menu">
+                <div class="plat"></div>
+                <div class="plat"></div>
+                <div class="plat"></div>
+                <div class="plat"></div>
+                <div class="plat"></div>
+                <div class="plat"></div>
+                <div class="plat"></div>
+                <div class="plat"></div>
+                <div class="plat"></div>
+            </div>
         </div>
     </section>
     <footer>
