--- a/index.html
+++ b/index.html
@@ -76,10 +76,13 @@
                 <p><i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</i></p>
                 <ul>
-                    <li style ="list-style: none;"><i class="fa-regular fa-circle-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                    <li style ="list-style: none;"><i class="fa-regular fa-circle-check"></i> Duis aute irure dolor in reprehenderit in voluptate velit.
+                    <li style="list-style: none;"><i class="fa-regular fa-circle-check"></i> Ullamco laboris nisi ut
+                        aliquip ex ea commodo consequat.</li>
+                    <li style="list-style: none;"><i class="fa-regular fa-circle-check"></i> Duis aute irure dolor in
+                        reprehenderit in voluptate velit.
                     </li>
-                    <li style ="list-style: none;"><i class="fa-regular fa-circle-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                    <li style="list-style: none;"><i class="fa-regular fa-circle-check"></i> Ullamco laboris nisi ut
+                        aliquip ex ea commodo consequat. Duis
                         aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat
                         nulla pariatur.</li>
                 </ul>
@@ -93,7 +96,7 @@
             </div>
             <div id="rightAbout">
                 <div id="imgAbout">
-                <img src="./public/img/about.jpg" alt="About">
+                    <img src="./public/img/about.jpg" alt="About">
                 </div>
             </div>
         </div>
@@ -105,10 +108,28 @@
                 <p>Why Choose Our Restaurant</p>
             </div>
             <div id="groupette">
-            <div class="triplette"><div><span>01</span><h4>Lorem Ipsum</h4><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa quod tempora totam ducimus corrupti!</p></div></div>
-            <div class="triplette"><div><span>02</span><h4>Repellat Nihil</h4><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente minus adipisci sit laboriosam blanditiis?</p></div></div>
-            <div class="triplette"><div><span>03</span><h4>Ad ad velit qui</h4><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quasi quibusdam quis facilis illum?</p></div></div>
-        </div>
+                <div class="triplette">
+                    <div><span>01</span>
+                        <h4>Lorem Ipsum</h4>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa quod tempora totam ducimus
+                            corrupti!</p>
+                    </div>
+                </div>
+                <div class="triplette">
+                    <div><span>02</span>
+                        <h4>Repellat Nihil</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente minus adipisci sit
+                            laboriosam blanditiis?</p>
+                    </div>
+                </div>
+                <div class="triplette">
+                    <div><span>03</span>
+                        <h4>Ad ad velit qui</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quasi quibusdam quis
+                            facilis illum?</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <section id="menu">
@@ -126,15 +147,95 @@
                 </ul>
             </div>
             <div id="div3Menu">
-                <div class="plat"></div>
-                <div class="plat"></div>
-                <div class="plat"></div>
-                <div class="plat"></div>
-                <div class="plat"></div>
-                <div class="plat"></div>
-                <div class="plat"></div>
-                <div class="plat"></div>
-                <div class="plat"></div>
+                <div class="carte" style="left: 0px; top: 0px">
+                    <img src="./public/img/menu/lobster-bisque.jpg" alt="lobster-bisque" class="imgDiv3">
+                    <div class="plat">
+                        <a href="#">Lobster Bisque</a>
+                        <span>$5.95</span>
+                    </div>
+                    <div class="composition">
+                        Lorem, deren, trataro, filede, nerada
+                    </div>
+                </div>
+                <div class="carte" style="left: 660px; top: 0px;">
+                    <img src="./public/img/menu/bread-barrel.jpg" alt="bread-barrel" class="imgDiv3">
+                    <div class="plat">
+                        <a href="#">Bread Barrel</a>
+                        <span>$6.95</span>
+                    </div>
+                    <div class="composition">
+                        Lorem, deren, trataro, filede, nerada
+                    </div>
+                </div>
+                <div class="carte" style="left: 0px; top: 120px">
+                    <img src="./public/img/menu/cake.jpg" alt="cake" class="imgDiv3">
+                    <div class="plat">
+                        <a href="#">Crab Cake</a>
+                        <span>$7.95</span>
+                    </div>
+                    <div class="composition">
+                        A delicate crab cake served on a toasted roll with lettuce and tartar sauce
+                    </div>
+                </div>
+                <div class="carte" style="left: 660px; top: 120px">
+                    <img src="./public/img/menu/caesar.jpg" alt="caesar" class="imgDiv3">
+                    <div class="plat">
+                        <a href="#">Caesar Selections</a>
+                        <span>$8.95</span>
+                    </div>
+                    <div class="composition">
+                        Lorem, deren, trataro, filede, nerada
+                    </div>
+                </div>
+                <div class="carte" style="left: 0px; top: 240px">
+                    <img src="./public/img/menu/tuscan-grilled.jpg" alt="tuscan-grilled" class="imgDiv3">
+                    <div class="plat">
+                        <a href="#">Tuscan Grilled</a>
+                        <span>$9.95</span>
+                    </div>
+                    <div class="composition">
+                        Grilled chicken with provolone, artichoke hearts, and roasted red pesto          
+                    </div>
+                </div>
+                <div class="carte" style="left: 660px; top: 240px">
+                    <img src="./public/img/menu/mozzarella.jpg" alt="mozzarella" class="imgDiv3">
+                    <div class="plat">
+                        <a href="#">Mozzarella Stick</a>
+                        <span>$4.95</span>
+                    </div>
+                    <div class="composition">
+                        Lorem, deren, trataro, filede, nerada
+                    </div>
+                </div>
+                <div class="carte" style="left: 0px; top: 360px">
+                    <img src="./public/img/menu/greek-salad.jpg" alt="greek-salad" class="imgDiv3">
+                    <div class="plat">
+                        <a href="#">Greek Salad</a>
+                        <span>$9.95</span>
+                    </div>
+                    <div class="composition">
+                        Fresh spinach, crisp romaine, tomatoes, and Greek olives
+                    </div>
+                </div>
+                <div class="carte" style="left: 660px; top: 360px">
+                    <img src="./public/img/menu/spinach-salad.jpg" alt="spinach-salad" class="imgDiv3">
+                    <div class="plat">
+                        <a href="#">Spinach Salad</a>
+                        <span>$9.95</span>
+                    </div>
+                    <div class="composition">
+                        Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette
+                    </div>
+                </div>
+                <div class="carte" style="left: 0px; top: 480px">
+                    <img src="./public/img/menu/lobster-roll.jpg" alt="lobster-roll" class="imgDiv3">
+                    <div class="plat">
+                        <a href="#">Lobster Roll</a>
+                        <span>$12.95</span>
+                    </div>
+                    <div class="composition">
+                        Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll</div>
+                </div>
             </div>
         </div>
     </section>
