sec menu approximately done

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </ul>
             </div>
             <div id="div3Menu">
-                <div class="carte" style="left: 0px; top: 0px">
+                <div class="carte starters">
                     <img src="./public/img/menu/lobster-bisque.jpg" alt="lobster-bisque" class="imgDiv3">
                     <div class="plat">
                         <a href="#">Lobster Bisque</a>
@@ -157,7 +157,7 @@
                         Lorem, deren, trataro, filede, nerada
                     </div>
                 </div>
-                <div class="carte" style="left: 660px; top: 0px;">
+                <div class="carte specialty">
                     <img src="./public/img/menu/bread-barrel.jpg" alt="bread-barrel" class="imgDiv3">
                     <div class="plat">
                         <a href="#">Bread Barrel</a>
@@ -167,7 +167,7 @@
                         Lorem, deren, trataro, filede, nerada
                     </div>
                 </div>
-                <div class="carte" style="left: 0px; top: 120px">
+                <div class="carte starters">
                     <img src="./public/img/menu/cake.jpg" alt="cake" class="imgDiv3">
                     <div class="plat">
                         <a href="#">Crab Cake</a>
@@ -177,7 +177,7 @@
                         A delicate crab cake served on a toasted roll with lettuce and tartar sauce
                     </div>
                 </div>
-                <div class="carte" style="left: 660px; top: 120px">
+                <div class="carte salads">
                     <img src="./public/img/menu/caesar.jpg" alt="caesar" class="imgDiv3">
                     <div class="plat">
                         <a href="#">Caesar Selections</a>
@@ -187,7 +187,7 @@
                         Lorem, deren, trataro, filede, nerada
                     </div>
                 </div>
-                <div class="carte" style="left: 0px; top: 240px">
+                <div class="carte specialty">
                     <img src="./public/img/menu/tuscan-grilled.jpg" alt="tuscan-grilled" class="imgDiv3">
                     <div class="plat">
                         <a href="#">Tuscan Grilled</a>
@@ -197,7 +197,7 @@
                         Grilled chicken with provolone, artichoke hearts, and roasted red pesto          
                     </div>
                 </div>
-                <div class="carte" style="left: 660px; top: 240px">
+                <div class="carte starters">
                     <img src="./public/img/menu/mozzarella.jpg" alt="mozzarella" class="imgDiv3">
                     <div class="plat">
                         <a href="#">Mozzarella Stick</a>
@@ -207,7 +207,7 @@
                         Lorem, deren, trataro, filede, nerada
                     </div>
                 </div>
-                <div class="carte" style="left: 0px; top: 360px">
+                <div class="carte salads">
                     <img src="./public/img/menu/greek-salad.jpg" alt="greek-salad" class="imgDiv3">
                     <div class="plat">
                         <a href="#">Greek Salad</a>
@@ -217,7 +217,7 @@
                         Fresh spinach, crisp romaine, tomatoes, and Greek olives
                     </div>
                 </div>
-                <div class="carte" style="left: 660px; top: 360px">
+                <div class="carte salads">
                     <img src="./public/img/menu/spinach-salad.jpg" alt="spinach-salad" class="imgDiv3">
                     <div class="plat">
                         <a href="#">Spinach Salad</a>
@@ -227,7 +227,7 @@
                         Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette
                     </div>
                 </div>
-                <div class="carte" style="left: 0px; top: 480px">
+                <div class="carte specialty">
                     <img src="./public/img/menu/lobster-roll.jpg" alt="lobster-roll" class="imgDiv3">
                     <div class="plat">
                         <a href="#">Lobster Roll</a>
