mise en place section #specials

--- a/index.html
+++ b/index.html
@@ -239,6 +239,14 @@
             </div>
         </div>
     </section>
+    <section id="specials">
+        <div class="container">
+            <div class="title">
+                <h2>SPECIALS</h2>
+                <p>Check Our Specials</p>
+            </div>
+        </div>
+    </section>
     <footer>
 
     </footer>
