--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         <span>$9.95</span>
                     </div>
                     <div class="composition">
-                        Grilled chicken with provolone, artichoke hearts, and roasted red pesto          
+                        Grilled chicken with provolone, artichoke hearts, and roasted red pesto
                     </div>
                 </div>
                 <div class="carte starters">
@@ -244,6 +244,130 @@
             <div class="title">
                 <h2>SPECIALS</h2>
                 <p>Check Our Specials</p>
+            </div>
+            <div id="divSpecials">
+                <div id="leftSpecials">
+                    <ul role="tablist">
+                        <li role="presentation" class="tablinks" onclick="vTab(event, 'tab-1')">
+                            <a class="nav-link" data-bs-toggle="tab" href="#tab-1" aria-selected="true" role="tab">Modi
+                                sit est</a>
+                        </li>
+                        <li role="presentation" class="tablinks" onclick="vTab(event, 'tab-2')">
+                            <a class="nav-link" data-bs-toggle="tab" href="#tab-2" aria-selected="false" tabindex="-1"
+                                role="tab">Unde praesentium sed</a>
+                        </li>
+                        <li role="presentation" class="tablinks" onclick="vTab(event, 'tab-3')">
+                            <a class="nav-link" data-bs-toggle="tab" href="#tab-3" aria-selected="false" tabindex="-1"
+                                role="tab">Pariatur explicabo vel</a>
+                        </li>
+                        <li role="presentation" class="tablinks" onclick="vTab(event, 'tab-4')">
+                            <a class="nav-link" data-bs-toggle="tab" href="#tab-4" aria-selected="false" tabindex="-1"
+                                role="tab">Nostrum qui quasi</a>
+                        </li>
+                        <li role="presentation" class="tablinks" onclick="vTab(event, 'tab-5')">
+                            <a class="nav-link" data-bs-toggle="tab" href="#tab-5" aria-selected="false" tabindex="-1"
+                                role="tab">Iusto ut expedita aut</a>
+                        </li>
+                    </ul>
+                </div>
+                <div id="rightSpecials">
+                    <div>
+                        <div class="activeTab" id="tab-1" role="tabpanel">
+                            <div class="englobeSpecials">
+                                <div class="designTab">
+                                    <h3>
+                                        Architecto ut aperiam autem id
+                                    </h3>
+                                    <p>Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a
+                                        videna mareta paulona marka
+                                    </p>
+                                    <p>
+                                        Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum
+                                        eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat
+                                        minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui
+                                        similique accusamus nostrum rem vero
+                                    </p>
+                                </div>
+                                <div class="imgTab">
+                                    <img src="./public/img/specials-1.png" alt="specials-1" class="imgOfimgTab">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="activeTab d-none" id="tab-2" role="tabpanel">
+                            <div class="englobeSpecials">
+                                <div class="designTab">
+                                    <h3>
+                                        Et blanditiis nemo veritatis excepturi
+                                    </h3>
+                                    <p>
+                                        Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a
+                                        videna mareta paulona marka
+                                    </p>
+                                    <p>
+                                        Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum
+                                        eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat
+                                        minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui
+                                        similique accusamus nostrum rem vero
+                                    </p>
+                                </div>
+                                <div class="imgTab">
+                                    <img src="./public/img/specials-2.png" alt="specials-1" class="imgOfimgTab">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="activeTab d-none" id="tab-3" role="tabpanel">
+                            <div class="englobeSpecials">
+                                <div class="designTab">
+                                    <h3>Architecto ut aperiam autem id
+                                    </h3>
+                                    <p>Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a
+                                        videna mareta paulona marka</p>
+                                    <p>Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum
+                                        eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat
+                                        minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui
+                                        similique accusamus nostrum rem vero</p>
+                                </div>
+                                <div class="imgTab">
+                                    <img src="./public/img/specials-3.png" alt="specials-1" class="imgOfimgTab">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="activeTab d-none" id="tab-4" role="tabpanel">
+                            <div class="englobeSpecials">
+                                <div class="designTab">
+                                    <h3>Architecto ut aperiam autem id
+                                    </h3>
+                                    <p>Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a
+                                        videna mareta paulona marka</p>
+                                    <p>Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum
+                                        eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat
+                                        minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui
+                                        similique accusamus nostrum rem vero</p>
+                                </div>
+                                <div class="imgTab">
+                                    <img src="./public/img/specials-4.png" alt="specials-1" class="imgOfimgTab">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="activeTab d-none" id="tab-5" role="tabpanel">
+                            <div class="englobeSpecials">
+                                <div class="designTab">
+                                    <h3>Architecto ut aperiam autem id
+                                    </h3>
+                                    <p>Qui laudantium consequatur laborum sit qui ad sapiente dila parde sonata raqer a
+                                        videna mareta paulona marka</p>
+                                    <p>Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum sint. Laborum
+                                        eos ipsum ipsa odit magni. Incidunt hic ut molestiae aut qui. Est repellat
+                                        minima eveniet eius et quis magni nihil. Consequatur dolorem quaerat quos qui
+                                        similique accusamus nostrum rem vero</p>
+                                </div>
+                                <div class="imgTab">
+                                    <img src="./public/img/specials-5.png" alt="specials-1" class="imgOfimgTab">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
