--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <div id="divSpecials">
                 <div id="leftSpecials">
                     <ul role="tablist">
-                        <li role="presentation" class="tablinks" onclick="vTab(event, 'tab-1')">
+                        <li role="presentation" class="tablinks active" onclick="vTab(event, 'tab-1')">
                             <a class="nav-link" data-bs-toggle="tab" href="#tab-1" aria-selected="true" role="tab">Modi
                                 sit est</a>
                         </li>
@@ -368,6 +368,14 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section id="events">
+        <div class="container">
+            <div class="title">
+                <h2>MENU</h2>
+                <p>Check Our Tasty Menu</p>
             </div>
         </div>
     </section>
