--- a/index.html
+++ b/index.html
@@ -374,14 +374,15 @@
     <section id="events">
         <div class="container">
             <div class="title">
-                <h2>MENU</h2>
-                <p>Check Our Tasty Menu</p>
+                <h2>EVENTS</h2>
+                <p>Organize Your Events in our Restaurant</p>
             </div>
         </div>
     </section>
     <footer>
 
     </footer>
+    <button onclick="topFunction()" id="arrowBtn" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
 
     <script src='./public/js/app.js'></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
