--- a/index.html
+++ b/index.html
@@ -377,6 +377,111 @@
                 <h2>EVENTS</h2>
                 <p>Organize Your Events in our Restaurant</p>
             </div>
+            <div class="section5-bas">
+                <div class="slider">
+                    <div class="imgs">
+                        <div class="img" style="left: 0">
+                            <div class="section5-test">
+                                <div class="section5-img">
+                                    <img src="./public/img/event-private.jpg" alt="" class="imgEvents"/>
+                                </div>
+                                <div class="section5-text">
+                                    <h3>Privates Parties</h3>
+                                    <div class="price">
+                                    <p class="section5-prix"><span>$290</span></p>
+                                    </div>
+                                    <p class="italicPara">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                                        sed do eiusmod tempor incididunt ut labore et dolore
+                                        magna aliqua.
+                                    </p>
+                                    <p>
+                                        Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    </p>
+                                    <p>
+                                        Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    </p>
+                                    <p>
+                                        Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                        Duis aute irure dolor in reprehenderit in voluptate
+                                        velit esse cillum dolore eu fugiat nulla pariatur
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="img">
+                            <div class="section5-test">
+                                <div class="section5-img">
+                                    <img style="size: 50%" src="./public/img/event-custom.jpg" alt="" />
+                                </div>
+                                <div class="section5-text">
+                                    <h3>Custom Parties</h3>
+                                    <div class="price">
+                                    <p><span>$99</span></p>
+                                    </div>
+                                    <p class="italicPara">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                                        sed do eiusmod tempor incididunt ut labore et dolore
+                                        magna aliqua.
+                                    </p>
+                                    <p>
+                                        Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    </p>
+                                    <p>
+                                        Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    </p>
+                                    <p>
+                                        Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                        Duis aute irure dolor in reprehenderit in voluptate
+                                        velit esse cillum dolore eu fugiat nulla pariatur
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="img">
+                            <div class="section5-test">
+                                <div class="section5-img">
+                                    <img style="size: 50%" src="./public/img/event-birthday.jpg" alt="" />
+                                </div>
+                                <div class="section5-text">
+                                    <h3>Birthday Parties</h3>
+                                    <div class="price">
+                                    <p class="section5-prix"><span>$189</span></p>
+                                    </div>
+                                    <p class="italicPara">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                                        sed do eiusmod tempor incididunt ut labore et dolore
+                                        magna aliqua.
+                                    </p>
+                                    <p>
+                                        Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    </p>
+                                    <p>
+                                        Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    </p>
+                                    <p>
+                                        Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                        Duis aute irure dolor in reprehenderit in voluptate
+                                        velit esse cillum dolore eu fugiat nulla pariatur
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dots"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="reservation">
+        <div class="container">
+            <div class="title">
+                <h2>RESERVATION</h2>
+                <p>Book a Table</p>
+            </div>
+            <div id="inputResa">
+
+            </div>
         </div>
     </section>
     <footer>
