--- a/index.html
+++ b/index.html
@@ -480,7 +480,27 @@
                 <p>Book a Table</p>
             </div>
             <div id="inputResa">
-
+                <form class="form-style-9">
+                    <ul>
+                    <li>
+                        <input type="text" name="field1" class="field-style field-split" placeholder="Your Name" />
+                        <input type="email" name="field2" class="field-style field-split" placeholder="Your Email" />
+                        <input type="phone" name="field3" class="field-style field-split" placeholder="Your Phone" />
+                    
+                    </li>
+                    <li>
+                        <input type="text" name="field4" class="field-style field-split" placeholder="Date" />
+                        <input type="text" name="field5" class="field-style field-split" placeholder="Time" />
+                        <input type="text" name="field6" class="field-style field-split" placeholder="# of people" />
+                    </li>
+                    <li>
+                    <textarea name="field7" class="field-style field-full" placeholder="Message"></textarea>
+                    </li>
+                    </ul>
+                    <div id="submitResa">
+                    <input type="submit" value="Book a Table" />
+                    </div>
+                    </form>
             </div>
         </div>
     </section>
