Sticky navbar done

--- a/index.html
+++ b/index.html
@@ -383,12 +383,12 @@
                         <div class="img" style="left: 0">
                             <div class="section5-test">
                                 <div class="section5-img">
-                                    <img src="./public/img/event-private.jpg" alt="" class="imgEvents"/>
+                                    <img src="./public/img/event-private.jpg" alt="" class="imgEvents" />
                                 </div>
                                 <div class="section5-text">
                                     <h3>Privates Parties</h3>
                                     <div class="price">
-                                    <p class="section5-prix"><span>$290</span></p>
+                                        <p class="section5-prix"><span>$290</span></p>
                                     </div>
                                     <p class="italicPara">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -417,7 +417,7 @@
                                 <div class="section5-text">
                                     <h3>Custom Parties</h3>
                                     <div class="price">
-                                    <p><span>$99</span></p>
+                                        <p><span>$99</span></p>
                                     </div>
                                     <p class="italicPara">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -446,7 +446,7 @@
                                 <div class="section5-text">
                                     <h3>Birthday Parties</h3>
                                     <div class="price">
-                                    <p class="section5-prix"><span>$189</span></p>
+                                        <p class="section5-prix"><span>$189</span></p>
                                     </div>
                                     <p class="italicPara">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -482,25 +482,72 @@
             <div id="inputResa">
                 <form class="form-style-9">
                     <ul>
-                    <li>
-                        <input type="text" name="field1" class="field-style field-split" placeholder="Your Name" />
-                        <input type="email" name="field2" class="field-style field-split" placeholder="Your Email" />
-                        <input type="phone" name="field3" class="field-style field-split" placeholder="Your Phone" />
-                    
-                    </li>
-                    <li>
-                        <input type="text" name="field4" class="field-style field-split" placeholder="Date" />
-                        <input type="text" name="field5" class="field-style field-split" placeholder="Time" />
-                        <input type="text" name="field6" class="field-style field-split" placeholder="# of people" />
-                    </li>
-                    <li>
-                    <textarea name="field7" class="field-style field-full" placeholder="Message"></textarea>
-                    </li>
+                        <li>
+                            <input type="text" name="field1" class="field-style field-split" placeholder="Your Name" />
+                            <input type="email" name="field2" class="field-style field-split"
+                                placeholder="Your Email" />
+                            <input type="phone" name="field3" class="field-style field-split"
+                                placeholder="Your Phone" />
+
+                        </li>
+                        <li>
+                            <input type="text" name="field4" class="field-style field-split" placeholder="Date" />
+                            <input type="text" name="field5" class="field-style field-split" placeholder="Time" />
+                            <input type="text" name="field6" class="field-style field-split"
+                                placeholder="# of people" />
+                        </li>
+                        <li>
+                            <textarea name="field7" class="field-style field-full" placeholder="Message"></textarea>
+                        </li>
                     </ul>
                     <div id="submitResa">
-                    <input type="submit" value="Book a Table" />
+                        <input type="submit" value="Book a Table" />
                     </div>
-                    </form>
+                </form>
+            </div>
+        </div>
+    </section>
+    <section id="testimonials">
+        <div class="container">
+            <div class="title">
+                <h2>TESTIMONIALS</h2>
+                <p>What they're saying about us</p>
+            </div>
+        </div>
+    </section>
+    <section id="gallery">
+        <div class="container">
+            <div class="title">
+                <h2>GALLERY</h2>
+                <p>Some photos from Our Restaurant</p>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div id="groupPics">
+                <div class="picsSolo">
+                    
+                </div>
+                <div class="picsSolo">
+
+                </div>
+                <div class="picsSolo">
+
+                </div>
+                <div class="picsSolo">
+
+                </div>
+                <div class="picsSolo">
+
+                </div>
+                <div class="picsSolo">
+
+                </div>
+                <div class="picsSolo">
+
+                </div>
+                <div class="picsSolo">
+
+                </div>
             </div>
         </div>
     </section>
