sec gallery done

--- a/index.html
+++ b/index.html
@@ -525,28 +525,28 @@
         <div class="container-fluid">
             <div id="groupPics">
                 <div class="picsSolo">
-                    
+                    <img src="./public/img/gallery/gallery-1.jpg" alt="gallery-1" class="img-fluid">
                 </div>
                 <div class="picsSolo">
-
+                    <img src="./public/img/gallery/gallery-2.jpg" alt="gallery-2" class="img-fluid">
                 </div>
                 <div class="picsSolo">
-
+                    <img src="./public/img/gallery/gallery-3.jpg" alt="gallery-3" class="img-fluid">
                 </div>
                 <div class="picsSolo">
-
+                    <img src="./public/img/gallery/gallery-4.jpg" alt="gallery-4" class="img-fluid">
                 </div>
                 <div class="picsSolo">
-
+                    <img src="./public/img/gallery/gallery-5.jpg" alt="gallery-5" class="img-fluid">
                 </div>
                 <div class="picsSolo">
-
+                    <img src="./public/img/gallery/gallery-6.jpg" alt="gallery-6" class="img-fluid">
                 </div>
                 <div class="picsSolo">
-
+                    <img src="./public/img/gallery/gallery-7.jpg" alt="gallery-7" class="img-fluid">
                 </div>
                 <div class="picsSolo">
-
+                    <img src="./public/img/gallery/gallery-8.jpg" alt="gallery-8" class="img-fluid">
                 </div>
             </div>
         </div>
