--- a/index.html
+++ b/index.html
@@ -551,6 +551,67 @@
             </div>
         </div>
     </section>
+    <section id="chefs">
+        <div class="container">
+            <div class="title">
+                <h2>CHEFS</h2>
+                <p>Our Proffesional Chefs</p>
+            </div>
+            <div id="chefzers">
+                <div class="cardChefs">
+                    <div class="groupEgerie">
+                        <img src="./public/img/chefs/chefs-1.jpg" alt="chefs-1" class="img-fluid">
+                        <div class="egerie">
+                            <div class="egerieContent">
+                                <h4>Walter White</h4>
+                                <span>Master Chef</span>
+                            </div>
+                            <div class="egerieSocial">
+                                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="cardChefs">
+                    <div class="groupEgerie">
+                        <img src="./public/img/chefs/chefs-2.jpg" alt="chefs-2" class="img-fluid">
+                        <div class="egerie">
+                            <div class="egerieContent">
+                                <h4>Sarah Jhonson</h4>
+                                <span>Patissier</span>
+                            </div>
+                            <div class="egerieSocial">
+                                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="cardChefs">
+                    <div class="groupEgerie">
+                        <img src="./public/img/chefs/chefs-3.jpg" alt="chefs-3" class="img-fluid">
+                        <div class="egerie">
+                            <div class="egerieContent">
+                                <h4>William Anderson</h4>
+                                <span>Cook</span>
+                            </div>
+                            <div class="egerieSocial">
+                                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer>
 
     </footer>
