--- a/index.html
+++ b/index.html
@@ -612,6 +612,52 @@
             </div>
         </div>
     </section>
+    <section id="contact">
+        <div class="container">
+            <div class="title">
+                <h2>CONTACT</h2>
+                <p>Contact Us</p>
+            </div>
+        </div>
+        <div>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12337.56354892845!2d20.295218235472138!3d39.3700283220065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x135c87724513911b%3A0x400bd2ce2b997a0!2zUGVyZGlrYSwgR3LDqGNl!5e0!3m2!1sfr!2sbe!4v1675259615048!5m2!1sfr!2sbe"
+                width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="container" id="concontact">
+            <div id="leftContact">
+                <div id="info">
+                    <div class="address">
+                        <i class="fa-solid fa-location-dot"></i>
+                        <h4>Location:</h4>
+                        <p>A108 Adam Street, New York, NY 535022</p>
+                    </div>
+                    <div class="openHours">
+                        <i class="fa-regular fa-clock"></i>
+                        <h4>Open Hours:</h4>
+                        <p>
+                            Monday-Saturday:<br>
+                            11:00 AM - 2300 PM
+                        </p>
+                    </div>
+                    <div class="email">
+                        <i class="fa-regular fa-envelope"></i>
+                        <h4>Email:</h4>
+                        <p>info@example.com</p>
+                    </div>
+                    <div class="phone">
+                        <i class="fa-solid fa-mobile-screen-button"></i>
+                        <h4>Call:</h4>
+                        <p>+1 5589 55488 55s</p>
+                    </div>
+                </div>
+            </div>
+            <div id="rightContact">
+
+            </div>
+        </div>
+    </section>
     <footer>
 
     </footer>
