--- a/index.html
+++ b/index.html
@@ -654,7 +654,24 @@
                 </div>
             </div>
             <div id="rightContact">
-
+                <form class="form-style-9">
+                    <ul>
+                        <li id="firstLi">
+                            <input type="text" name="field1" class="field-style field-split" placeholder="Your Name" />
+                            <input type="email" name="field2" class="field-style field-split"
+                                placeholder="Your Email" />
+                        </li>
+                        <li>
+                            <input type="text" name="field3" class="field-style field-full" placeholder="Subject" />
+                        </li>
+                        <li>
+                            <textarea name="field7" class="field-style field-full" placeholder="Message" id="textArea"></textarea>
+                        </li>
+                    </ul>
+                    <div id="submitResa">
+                        <input type="submit" value="Send Message" />
+                    </div>
+                </form>
             </div>
         </div>
     </section>
