colonne un footer

--- a/index.html
+++ b/index.html
@@ -665,7 +665,8 @@
                             <input type="text" name="field3" class="field-style field-full" placeholder="Subject" />
                         </li>
                         <li>
-                            <textarea name="field7" class="field-style field-full" placeholder="Message" id="textArea"></textarea>
+                            <textarea name="field7" class="field-style field-full" placeholder="Message"
+                                id="textArea"></textarea>
                         </li>
                     </ul>
                     <div id="submitResa">
@@ -676,7 +677,37 @@
         </div>
     </section>
     <footer>
-
+        <div class="footerTop">
+            <div class="container">
+                <div>
+                    <div class="footerInfo">
+                        <h3>Restaurantly</h3>
+                        <p>
+                            A108 Adam Street <br>
+                            NY 535022, USA<br><br>
+                            <strong>Phone:</strong> +1 5589 55488 55<br>
+                            <strong>Email:</strong> info@example.com<br>
+                        </p>
+                        <div class="social-links mt-3">
+                            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+                            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+                            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+                            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="footerLinks"></div>
+                </div>
+                <div>
+                    <div class="footerLinks"></div>
+                </div>
+                <div>
+                    <div class="footerNews"></div>
+                </div>
+            </div>
+        </div>
     </footer>
     <button onclick="topFunction()" id="arrowBtn" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
 
