--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                         <a href="#" class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="footerLinks w-25">
+                <div class="footerLinks">
                     <h4>Useful Links</h4>
                     <ul>
                         <li><i class="fa-solid fa-chevron-right"></i> <a href="#">Home</a></li>
@@ -705,7 +705,7 @@
                         <li><i class="fa-solid fa-chevron-right"></i> <a href="#">Privacy policy</a></li>
                     </ul>
                 </div>
-                <div class="footerLinks w-25">
+                <div class="footerLinks">
                     <h4>Our Services</h4>
                     <ul>
                         <li><i class="fa-solid fa-chevron-right"></i> <a href="#">Web Design</a></li>
@@ -715,8 +715,12 @@
                         <li><i class="fa-solid fa-chevron-right"></i> <a href="#">Graphic Design</a></li>
                     </ul>
                 </div>
-                <div class="footerNews w-25">
-
+                <div class="footerNews">
+                    <h4>Our Newsletter</h4>
+                    <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+                    <form>
+                        <input type="email" name="email"><input type="submit" value="Subscribe">
+                    </form>
                 </div>
             </div>
         </div>
