--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
     <footer>
         <div class="footerTop">
             <div class="container d-flex">
-                <div class="footerInfo w-25">
+                <div class="footerInfo">
                     <h3>Restaurantly</h3>
                     <p>
                         A108 Adam Street <br>
@@ -698,21 +698,22 @@
                 <div class="footerLinks">
                     <h4>Useful Links</h4>
                     <ul>
-                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#">Home</a></li>
-                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#">About us</a></li>
-                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#">Services</a></li>
-                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#">Terms of service</a></li>
-                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#">Privacy policy</a></li>
+                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Home</a></li>
+                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">About us</a></li>
+                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Services</a></li>
+                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Terms of service</a></li>
+                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Privacy policy</a></li>
                     </ul>
                 </div>
                 <div class="footerLinks">
                     <h4>Our Services</h4>
                     <ul>
-                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#">Web Design</a></li>
-                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#">Web Development</a></li>
-                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#">Product Management</a></li>
-                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#">Marketing</a></li>
-                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#">Graphic Design</a></li>
+                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Web Design</a></li>
+                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Web Development</a></li>
+                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Product Management</a>
+                        </li>
+                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Marketing</a></li>
+                        <li><i class="fa-solid fa-chevron-right"></i> <a href="#" class="ms-1">Graphic Design</a></li>
                     </ul>
                 </div>
                 <div class="footerNews">
@@ -722,6 +723,11 @@
                         <input type="email" name="email"><input type="submit" value="Subscribe">
                     </form>
                 </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="copyright">
+                © Copyright <strong><span>molen food</span></strong>. All Rights Reserved
             </div>
         </div>
     </footer>
